<resources>
    <string name="profile_screen">Profile Screen</string>
    <string name="logout">Logout</string>
    <string name="app_name">SignUpApp</string>
    <string name="title_workbridge">WorkBridge</string>
    <string name="button_applicant">Applicant</string>
    <string name="button_employer">Employer</string>
    <string name="hint_full_name">Full Name (FN, MI optional, LN)</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Create Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="login_text">Already have an account? Log in</string>
    <string name="applicant">Applicant</string>
    <string name="employer">Employer</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="edit_prof">Edit profile</string>
    <string name="signup">New to WorkBridge? Sign up.</string>
    <string name="enter_otp">Enter One Time Password</string>
    <string name="code_sent_via_number">Your code was sent to you via phone number</string>
    <string name="did_not_receive">Didn\'t receive code?</string>
    <string name="resend_otp"> Resend OTP</string>
    <string name="back_btn">back_btn</string>
    <string name="zero">0</string>
    <string name="submit_btn">Submit</string>
    <string name="logo">logo_new</string>
    <string name="attach_file">Attach File</string>
    <string name="hint_company_name">Company Name</string>
    <string name="account_created_successfully">Account created successfully!</string>
    <string name="enter_your_phone_number">Enter phone number (e.g. 0912)</string>
    <string name="cntinue">Continue</string>
    <string name="delete_btn">delete_btn</string>
    <string name="profile">profile</string>
    <string name="post">post</string>
    <string name="job_description">Job Description</string>
    <string name="salary_range">Salary Range</string>
    <string name="job_type">Job Type</string>
    <string name="job_title">Job Title</string>
    <string name="job_location">Job Location</string>
    <string name="company_name">Company Name</string>
    <string name="dash">---</string>
    <string name="upload">UPLOAD</string>
    <string-array name="job_type_array">
        <item>Full-Time</item>
        <item>Part-Time</item>
        <item>Freelance</item>
        <item>Internship</item>
        <item>Contract</item>
    </string-array>


</resources>